--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-black"> <b>MyTechbook Security Solutions </b>
              <br class="hidden lg:inline-block"> Welcome To  World of Information </h1>
             </h1>
-	    <p class="mb-8 leading-relaxed text-black">Hey This is<b><u> Sandeep singh solanki </u></b>  It is my attempt to teach those Linux and Ethical Hacking skills to people in short time which took me ages to learn. Browse courses and find out the best course for you. </p>
+	    <p class="mb-8 leading-relaxed text-black">Hey This is<b><u> Sandeep solanki </u></b>  It is my attempt to teach those Linux and Ethical Hacking skills to people in short time which took me ages to learn. Browse courses and find out the best course for you. </p>
             <div class="flex justify-center">
               <button id="landing" class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">Get started</button>
             </div>
